--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 1200px;
+  margin: auto;
+  font-family: "Open Sans", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  display: flex; 
+  align-items: center; 
+  padding: 20px; 
+  justify-content: center;
+  gap: 20px;
 }
+
+.header p {
+  font-weight: bold;
+}
+
+.tab {
+  display: flex;
+  justify-content: space-between; 
+  gap: 30px;
+  }
+  
+  .tab li { 
+    list-style-type: none; 
+}
+
+.tab li a { 
+  text-decoration: none;
+  color: #000;
+}
+
+.block_input {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.cart {
+display: flex;
+justify-content: space-between;
+align-items: center;
+gap: 20px;
+}
+
+
