--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Сброс стилей */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #fdf7f0;
+    color: #274c5b;
   }
-  to {
-    transform: rotate(360deg);
+  
+  /* Шапка */
+  .header {
+    background-color: #fff;
+    padding: 10px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
-}
+  
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  /* Логотип */
+  .logo {
+    display: flex;
+    align-items: center;
+    color: #274c5b;
+  }
+  
+  .logo img {
+    margin-right: 10px;
+  }
+  
+  /* Навигационное меню */
+  .navigation ul {
+    display: flex;
+    gap: 20px;
+  }
+  
+  .navigation ul li a {
+    text-decoration: none;
+    color: #274c5b;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  /* Поиск */
+  .search-container {
+    display: flex;
+    align-items: center;
+    border: 3px solid #ccc;
+    border-radius: 10px;
+    height: 40px;
+    transition: border-color 0.3s;
+  }
+  
+  .search-container:focus-within {
+    border-color: #68a47f;
+  }
+  
+  .search-input {
+    border: none;
+    padding: 5px 10px;
+    font-size: 14px;
+    width: 200px;
+    height: 100%;
+    border-radius: 10px 0 0 10px;
+    outline: none;
+  }
+  
+  .search-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0 10px 10px 0;
+  }
+  
+  .search-button img {
+    width: 20px;
+    height: 20px;
+  }
+  
+  /* Корзина */
+  .cart {
+    display: flex;
+    align-items: center;
+  }
+  
+  .cart button {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border: none;
+    font-weight: bold;
+    color: #274c5b;
+  }
+  
+  .cart img {
+    margin-right: 5px;
+  }
+  
